--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "atifrazzaq/weviewer",   
-    "description": "Here you can see tables details, manage logs, and many more",
+    "description": "Here you can see table details, manage logs, monitor system activity, track user actions, view reports, configure settings, and perform various administrative tasks to keep everything running smoothly.",
+    "version": "1.0.2",
     "type": "library",
     "license": "MIT",
     "autoload": {
