--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
         }
     },
     "require": {
-        "php": "^8.2",
-        "illuminate/support": "^12.0"
+        "php": "^7.4|^8.0",
+        "illuminate/support": "^7.0|^8.0|^9.0|^10.0|^11.0|^12.0"
     },
     "extra": {
         "laravel": {
