--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "atifrazzaq/weviewer",   
     "description": "Here you can see table details, manage logs, monitor system activity, track user actions, view reports, configure settings, and perform various administrative tasks to keep everything running smoothly.",
-    "version": "1.0.8",
+    "version": "1.0.9",
     "type": "library",
     "license": "MIT",
     "autoload": {
@@ -16,7 +16,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Atifrazzaq\\weviewer\\weviewerServiceProvider"
+                "Atifrazzaq\\weviewer\\WeviewerServiceProvider"
             ]
         }
     },
